--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,14 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn run:app
+    startCommand: python init_db.py && gunicorn run:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
+      - key: FLASK_ENV
+        value: production
+      - key: RENDER
+        value: true
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
